<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Awesome App</string>
    <string name="action_settings">Settings</string>
    <string name="please_enter_userdata">Please enter userdata</string>
    <string name="user_data_input">User data input</string>
    <string name="username">Username</string>
    <string name="input_username">Input username</string>
    <string name="real_name">Real name</string>
    <string name="input_real_name">Input real name</string>
    <string name="email">Email</string>
    <string name="input_email_adress">Input email address</string>
    <string name="ok">OK</string>
    <string name="ok_button">OK button</string>
    <string name="registration">Awesome App</string>
    <string name="title_activity_menu">Select flag</string>
    <string name="flag_image">Flag image</string>
    <string name="title_activity_summary">Summary</string>
    <string name="hello_world">Hello world!</string>
    <string name="selected_image">Selected image</string>
    <string name="summary">Summary</string>

</resources>