<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_dark"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/summary"
        android:gravity="center"
        android:paddingTop="15dip"
        android:text="@string/summary"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:paddingTop="15dip"
        android:paddingLeft="15dip"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/realName_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/real_name"
        android:paddingTop="15dip"
        android:paddingLeft="15dip"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:paddingTop="15dip"
        android:paddingLeft="15dip"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/flag_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher"
        android:contentDescription="@string/selected_image"
        android:paddingTop="15dip" />

</LinearLayout>